--- a/Lessons/03_CodingBasics.Rmd
+++ b/Lessons/03_CodingBasics.Rmd
@@ -36,22 +36,24 @@ vector2
 vector3 <- c(TRUE,TRUE,TRUE,FALSE,TRUE,FALSE) #logical vector
 vector3
 
-vector1[3] # 
+vector1[3] # pull out the oject at the 3rd place.
 
 # Matrices ----
-matrix1 <- matrix(1:20, nrow = 5,ncol = 4) # 
+matrix1 <- matrix(1:20, nrow = 5,ncol = 4) # matix is a function
 matrix1
-matrix2 <- matrix(1:20, nrow = 5, ncol = 4, byrow = TRUE) #
+matrix2 <- matrix(1:20, nrow = 5, ncol = 4, byrow = TRUE) #byrow count from left to right first, the defalut is to count from top to the bottom first.
 matrix2
+
 matrix3 <- matrix(1:20, nrow = 5, ncol = 4, byrow = TRUE, # return after comma continues the line
                   dimnames = list(c("uno", "dos", "tres", "cuatro", "cinco"), 
-                                  c("un", "deux", "trois", "cat"))) #
-
+                                  c("un", "deux", "trois", "cat"))) #row first,column second.
+matrix3
 matrix1[4, ] #
 matrix1[ , 3] #
-matrix1[c(12, 14)] #
+matrix1[c(12, 14)] # find the number 
 matrix1[c(12:14)] #
 matrix1[2:4, 1:3] #
+matrix3[c(12, 14)]
 
 cells <- c(1, 26, 24, 68)
 rnames <- c("R1", "R2")
@@ -65,11 +67,11 @@ list1 <- list(name = "Maria", mynumbers = vector1, mymatrix = matrix1, age = 5.3
 list1[[2]]
 
 # Data Frames ----
-d <- c(1, 2, 3, 4) # What type of vector?
-e <- c("red", "white", "red", NA) # What type of vector?
-f <- c(TRUE, TRUE, TRUE, FALSE) # What type of vector?
+d <- c(1, 2, 3, 4) # What type of vector? numeric vector
+e <- c("red", "white", "red", NA) # What type of vector? character vector
+f <- c(TRUE, TRUE, TRUE, FALSE) # What type of vector? logical vector
 dataframe1 <- data.frame(d,e,f) #
-names(dataframe1) <- c("ID","Color","Passed"); View(dataframe1) # 
+names(dataframe1) <- c("ID","Color","Passed"); View(dataframe1) # ;can reduce lines
 
 dataframe1[1:2,] # 
 dataframe1[c("ID","Passed")] # 
@@ -82,20 +84,27 @@ Question: How do the different types of data appear in the Environment tab?
 
 Question: In the R chunk below, write "dataframe1$". Press `tab` after you type the dollar sign. What happens?
 
-> Answer: 
+> Answer: it gives the option about the potential names
 
 ### Coding challenge
 
 Find a ten-day forecast of temperatures (Fahrenheit) for Durham, North Carolina. Create two vectors, one representing the high temperature on each of the ten days and one representing the low.
 
 ```{r}
-
+t1 <- c(60:69);t2 <- c(70:79)
+tem <- data.frame(t1,t2)  
+names(tem) = c(" Durham low"," Durham high")
+tem1
 ```
 
 Now, create two additional vectors that include the ten-day forecast for the high and low temperatures in Celsius.
 
 ```{r}
 
+c1 <-(t1 − 32) * 5/9; c2 <-(t1 − 32) * 5/9
+tem1 <- data.frame(t1,c1,t2,c2,t3,c3,t4,c4)  
+names(tem1) = c(" Durham low F", " Durham low C"," Durham high F"," Durham high C", )
+tem1
 ```
 
 Combine your four vectors into a data frame and add informative column names.
