--- a/Lessons/04_DataExploration.Rmd
+++ b/Lessons/04_DataExploration.Rmd
@@ -47,6 +47,7 @@ At the top of your R scripts, you should load any packages that need to be used 
 At the same time, you should also load your theme if you are doing any data visualization with ggplot. More on this later.
 
 ```{r, message = FALSE}
+#load the package without the message
 # Load package
 library(tidyverse)
 ```
@@ -66,11 +67,13 @@ You may also import datasets from the Files tab, but this is not recommended sin
 # Relative file path (friendly for users regardless of machine)
 USGS.flow.data <- read.csv("./Data/Raw/USGS_Site02085000_Flow_Raw.csv")
 
+#one dot is going in one level, tow dots is going out one level.
+
 # What happens if we don't assign a name to our imported dataset?
 #read.csv("../Data/Raw/USGS_Site02085000_Flow_Raw.csv")
 
 # Another option is to choose with your browser
-# read.csv(file.choose())
+#read.csv(file.choose())
 
 # To import .txt files, use read.table rather than read.csv
 #read.table()
@@ -97,14 +100,17 @@ colnames(USGS.flow.data) <- c("agency_cd", "site_no", "datetime",
                               "gage.height.max", "gage.height.max.approval", 
                               "gage.height.min", "gage.height.min.approval", 
                               "gage.height.mean", "gage.height.mean.approval")
-str(USGS.flow.data)
-dim(USGS.flow.data)
-length(USGS.flow.data)
+#in this case,you have to rename all of it, or else use [] to specify which column
+colnames(USGS.flow.data)[1] <- c("agency_cd")
+str(USGS.flow.data)#strucure of the data frame???
+dim(USGS.flow.data)#dimension:raws and column
+length(USGS.flow.data)#give you number of column
+nrow(USGS.flow.data)
 
 head(USGS.flow.data)
 head(USGS.flow.data, 10)
 tail(USGS.flow.data, 5)
-USGS.flow.data[30000:30005, c(3, 8, 14)]
+USGS.flow.data[30000:30005, c(3, 8, 14)]#define raws,column
 
 class(USGS.flow.data$datetime)
 class(USGS.flow.data$discharge.mean)
@@ -132,7 +138,7 @@ Question: What types of research questions might make it favorable to remove NAs
 > Answer: 
 
 ```{r}
-USGS.flow.data.complete <- na.omit(USGS.flow.data)
+USGS.flow.data.complete <- na.omit(USGS.flow.data)#take any data raw that has any NA.
 dim(USGS.flow.data)
 dim(USGS.flow.data.complete)
 
@@ -166,19 +172,21 @@ help(as.Date)
 # Write code for three different date formats. 
 # An example is provided to get you started.
 # (code must be uncommented)
-today <- Sys.Date()
+today <- Sys.Date()#base your computer dat
+today
 format(today, format = "%B")
-#format(today, format = "")
-#format(today, format = "")
-#format(today, format = "")
+format(today, format = "%b")
+format(today, format = "%m")
+format(today, format = "%M")
 
 USGS.flow.data$datetime <- as.Date(USGS.flow.data$datetime, format = "%m/%d/%y") 
+#tells R what is the format of the data
 ```
 
 Note that for every date prior to 1969, R has assigned the date in the 2000s rather than the 1900s. This can be fixed with an `ifelse` statement inside a function. Run through the code below and write what is happening in the comment above each line.
 
 ```{r}
-# 
+# change the format of the data
 USGS.flow.data$datetime <- format(USGS.flow.data$datetime, "%y%m%d")
 
 #
