--- a/Lessons/05_DataExploration.Rmd
+++ b/Lessons/05_DataExploration.Rmd
@@ -60,6 +60,7 @@ Visualize count data for categorical variables.
 ```{r, fig.height = 3, fig.width = 4}
 ggplot(USGS.flow.data, aes(x = discharge.mean.approval)) +
   geom_bar()
+summary(USGS.flow.data$discharge.mean.approval)
 ```
 
 ### Histogram (function: geom_histogram)
@@ -67,15 +68,15 @@ ggplot(USGS.flow.data, aes(x = discharge.mean.approval)) +
 Visualize distributions of values for continuous numerical variables. What is happening in each line of code? Insert a comment above each line.
 
 ```{r, fig.height = 3, fig.width = 4}
-#
+#+ is let R keep reading
 ggplot(USGS.flow.data) +
   geom_histogram(aes(x = discharge.mean))
 
-#
+#each bin is 10
 ggplot(USGS.flow.data) +
   geom_histogram(aes(x = discharge.mean), binwidth = 10)
 
-#
+#divide the total into 20
 ggplot(USGS.flow.data) +
   geom_histogram(aes(x = discharge.mean), bins = 20)
 
@@ -85,8 +86,9 @@ ggplot(USGS.flow.data, aes(x = discharge.mean)) +
   scale_x_continuous(limits = c(0, 500))
   
 #
-ggplot(USGS.flow.data) +
+gageplot<- ggplot(USGS.flow.data) +
   geom_histogram(aes(x = gage.height.mean))
+print(gageplot)
 
 ```
 ### Frequency line graph (function: geom_freqpoly)
@@ -94,13 +96,16 @@ ggplot(USGS.flow.data) +
 An alternate to a histogram is a frequency polygon graph (distributions of values for continuous numerical variables). Instead of displaying bars,  counts of continuous variables are displayed as lines. This is advantageous if you want to display multiple variables or categories of variables at once.
 
 ```{r, fig.height = 3, fig.width = 4}
-#
+#lty is line type
 ggplot(USGS.flow.data) +
   geom_freqpoly(aes(x = gage.height.mean), bins = 50) +
-  geom_freqpoly(aes(x = gage.height.min), bins = 50, color = "darkgray") +
+  geom_freqpoly(aes(x = gage.height.min), bins = 50, color = "green") +
   geom_freqpoly(aes(x = gage.height.max), bins = 50,  lty = 2) +
   scale_x_continuous(limits = c(0, 10))
 
+summary(USGS.flow.data$gage.height.max)
+summary(USGS.flow.data$gage.height.min)
+summary(USGS.flow.data$gage.height.mean)
 #
 ggplot(USGS.flow.data) +
   geom_freqpoly(aes(x = gage.height.mean, color = gage.height.mean.approval), bins = 50) +
@@ -131,7 +136,13 @@ ggplot(USGS.flow.data) +
 ggplot(USGS.flow.data) +
   geom_boxplot(aes(x = gage.height.mean, y = discharge.mean, group = cut_width(gage.height.mean, 1)))
 
-#
+#scale=count can show the relative data size.
+ggplot(USGS.flow.data) +
+  geom_violin(aes(x = gage.height.mean.approval, y = gage.height.mean), 
+              draw_quantiles = c(0.25, 0.5, 0.75),
+                                scale="count")
+
+#defalt is scale="area"
 ggplot(USGS.flow.data) +
   geom_violin(aes(x = gage.height.mean.approval, y = gage.height.mean), 
               draw_quantiles = c(0.25, 0.5, 0.75))
