--- a/Assignments/A03_DataExploration.Rmd
+++ b/Assignments/A03_DataExploration.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Assignment 3: Data Exploration"
-author: "Student Name"
+author: "Yang Wang"
 output: pdf_document
 geometry: margin=2.54cm
 ---
@@ -23,6 +23,10 @@ The completed exercise is due on Tuesday, January 28 at 1:00 pm.
 
 1. Check your working directory, load necessary packages (tidyverse), and upload two datasets: the ECOTOX neonicotinoid dataset (ECOTOX_Neonicotinoids_Insects_raw.csv) and the Niwot Ridge NEON dataset for litter and woody debris (NEON_NIWO_Litter_massdata_2018-08_raw.csv). Name these datasets "Neonics" and "Litter", respectively. 
 ```{r,  message = FALSE}
+getwd()
+library(tidyverse)
+Neonics <- read.csv("./Data/Raw/ECOTOX_Neonicotinoids_Insects_raw.csv")
+Litter <- read.csv("./Data/Raw/NEON_NIWO_Litter_massdata_2018-08_raw.csv")
 
 ```
 
@@ -30,18 +34,18 @@ The completed exercise is due on Tuesday, January 28 at 1:00 pm.
 
 2. The neonicotinoid dataset was collected from the Environmental Protection Agency's ECOTOX Knowledgebase, a database for ecotoxicology research. Neonicotinoids are a class of insecticides used widely in agriculture. The dataset that has been pulled includes all studies published on insects. Why might we be interested in the ecotoxicologoy of neonicotinoids on insects? Feel free to do a brief internet search if you feel you need more background information. 
 
-> Answer: 
+> Answer: Neonicotinoid pesitcides are widely applied to agriculture land. The residue of neonicotinoid may post risk to non-target benefical insects.
 
 3. The Niwot Ridge litter and woody debris dataset was collected from the National Ecological Observatory Network, which collectively includes 81 aquatic and terrestrial sites across 20 ecoclimatic domains. 32 of these sites sample forest litter and woody debris, and we will focus on the Niwot Ridge long-term ecological research (LTER) station in Colorado. Why might we be interested in studying litter and woody debris that falls to the ground in forests? Feel free to do a brief internet search if you feel you need more background information. 
 
-> Answer: 
+> Answer: Insects constantly contact with litter and woody debris. Knowing the concentration of neonicotinoud in litter and woody debris can help to identidy the chemical exposure of insects.
 
-4. How is litter and woody debris sampled as part of the NEON network? Read the NEON_Litterfall_UserGuide.pdf document to learn more. List three pieces of salient information about the sampling methods here: 
+4. How is litter and woody debr is sampled as part of the NEON network? Read the NEON_Litterfall_UserGuide.pdf document to learn more. List three pieces of salient information about the sampling methods here: 
 
 > Answer: 
-*
-*
-*
+*spatial sampling design
+*ramdom for the tower plots, and target for the forest tower airshed
+*temporal sampling design
 
 
 
@@ -50,20 +54,23 @@ The completed exercise is due on Tuesday, January 28 at 1:00 pm.
 5. What are the dimensions of the dataset?
 
 ```{r}
+dim(Neonics)
 
 ```
 
 6. Using the `summary` function, determine the most common effects that are studied. Why might these effects specifically be of interest?
 ```{r}
+summary(Neonics$Effect)
 
 ```
 
-> Answer: 
+> Answer: Population and mortality are the most common effects that are studied.Both of them can reflect the population change of the insects.
 
 7. Using the `summary` function, determine the six most commonly studied species in the dataset (common name). What do these species have in common, and why might they be of interest over other insects? Feel free to do a brief internet search for more information if needed.
 
 ```{r}
-
+su<-summary(Neonics$common.name)
+list(su)
 ```
 
 > Answer: 
@@ -71,11 +78,12 @@ The completed exercise is due on Tuesday, January 28 at 1:00 pm.
 8. Concentrations are always a numeric value. What is the class of Conc.1..Author. in the dataset, and why is it not numeric?
 
 ```{r}
+class(Neonics$Conc.1..Author.)
+str(Neonics$Conc.1..Author.)
 
 ```
 
-> Answer:
-
+> Answer: Because it has non-numeric subjects.
 
 
 ## Explore your data graphically (Neonics)
@@ -83,11 +91,15 @@ The completed exercise is due on Tuesday, January 28 at 1:00 pm.
 9. Using `geom_freqpoly`, generate a plot of the number of studies conducted by publication year. 
 ```{r}
 
+ggplot(Neonics) +
+  geom_freqpoly(aes(x = Publication.Year),binwidth = 1) 
+  
 ```
 
 10. Reproduce the same graph but now add a color aesthetic so that different Test.Location are displayed as different colors.
 ```{r}
-
+ggplot(Neonics) +
+  geom_freqpoly(aes(x = Neonics$Publication.Year, color = Neonics$Test.Location ),binwidth = 1) 
 ```
 
 Interpret this graph. What are the most common test locations, and do they differ over time?
@@ -97,41 +109,55 @@ Interpret this graph. What are the most common test locations, and do they diffe
 11. Create a bar graph of Endpoint counts. What are the two most common end points, and how are they defined? Consult the ECOTOX_CodeAppendix for more information. 
 
 ```{r}
+ggplot(Neonics, aes(x = Neonics$Endpoint)) +
+  geom_bar()
 
 ```
 
-> Answer: 
+> Answer: The most common end poins are LOEL and NOEL.LOEL is the lowest observed adverse effect level. NOEL is the highest no obesrvabel effect level.
 >
 
 ## Explore your data (Litter)
 
 12. Determine the class of collectDate. Is it a date? If not, change to a date and confirm the new class of the variable. Using the `unique` function, determine which dates litter was sampled in August 2018. 
 ```{r}
+class(Litter$collectDate)
+Litter$collectDate <- as.Date(Litter$collectDate,format="%d-%m-%Y") 
+class(Litter$collectDate)
+unique(Litter$collectDate)
 
 ```
 
 13. Using the `unique` function, determine how many plots were sampled at Niwot Ridge. How is the information obtained from `unique` different from that obtained from `summary`?
 
 ```{r}
-
+unique(Litter$plotID)
+summary(Litter$plotID)
 ```
 
-> Answer: 
+> Answer: The information obtained from uninque function does not include the count of the same plot. However, It gives the number of the unique plots and has a rank of the plot code.
 
 14. Create a bar graph of functionalGroup counts. This shows you what type of litter is collected at the Niwot Ridge sites. Notice that litter types are fairly equally distributed across the Niwot Ridge sites.
 ```{r}
-
+ggplot(Litter, aes(x = Litter$functionalGroup)) +
+  geom_bar()
 ```
 
 15. Using `geom_boxplot` and `geom_violin`, create a boxplot and a violin plot of dryMass by functionalGroup. 
 ```{r}
+ggplot(Litter) +
+  geom_boxplot(aes(x = Litter$functionalGroup, y = dryMass))
+
+ggplot(Litter) +
+  geom_violin(aes(x = Litter$functionalGroup, y = dryMass), 
+                                scale="area")
 
 ```
 
 Why is the boxplot a more effective visualization option than the violin plot in this case?
 
-> Answer: 
+> Answer: The dry mass between different functional groups vary too much.
 
 What type(s) of litter tend to have the highest biomass at these sites? 
 
-> Answer: 
+> Answer: Needles
