--- a/Assignments/A03_DataExploration.Rmd
+++ b/Assignments/A03_DataExploration.Rmd
@@ -34,11 +34,11 @@ Litter <- read.csv("./Data/Raw/NEON_NIWO_Litter_massdata_2018-08_raw.csv")
 
 2. The neonicotinoid dataset was collected from the Environmental Protection Agency's ECOTOX Knowledgebase, a database for ecotoxicology research. Neonicotinoids are a class of insecticides used widely in agriculture. The dataset that has been pulled includes all studies published on insects. Why might we be interested in the ecotoxicologoy of neonicotinoids on insects? Feel free to do a brief internet search if you feel you need more background information. 
 
-> Answer: Neonicotinoid pesitcides are widely applied to agriculture land. The residue of neonicotinoid may post risk to non-target benefical insects.
+> Answer: Neonicotinoid pesticides are widely applied to agriculture land. The residue of neonicotinoid may post risk to non-target beneficial insects.Insects are one of important parts of a healthy ecosystem. Therefore, we might interested in the ecotoxicology of this chemical for ecosystem health and balance.
 
 3. The Niwot Ridge litter and woody debris dataset was collected from the National Ecological Observatory Network, which collectively includes 81 aquatic and terrestrial sites across 20 ecoclimatic domains. 32 of these sites sample forest litter and woody debris, and we will focus on the Niwot Ridge long-term ecological research (LTER) station in Colorado. Why might we be interested in studying litter and woody debris that falls to the ground in forests? Feel free to do a brief internet search if you feel you need more background information. 
 
-> Answer: Insects constantly contact with litter and woody debris. Knowing the concentration of neonicotinoud in litter and woody debris can help to identidy the chemical exposure of insects.
+> Answer: Insects constantly contact with litter and woody debris. Knowing the concentration of chemical in litter and woody debris can help to identify the chemical exposure of insects.
 
 4. How is litter and woody debr is sampled as part of the NEON network? Read the NEON_Litterfall_UserGuide.pdf document to learn more. List three pieces of salient information about the sampling methods here: 
 
@@ -64,16 +64,16 @@ summary(Neonics$Effect)
 
 ```
 
-> Answer: Population and mortality are the most common effects that are studied.Both of them can reflect the population change of the insects.
+> Answer: Population and mortality are the most common effects that are studied. Because both of them can reflect the acute effect of the chemical, while other endpoints are reflecting chronic effect.
 
 7. Using the `summary` function, determine the six most commonly studied species in the dataset (common name). What do these species have in common, and why might they be of interest over other insects? Feel free to do a brief internet search for more information if needed.
 
 ```{r}
-su<-summary(Neonics$common.name)
-list(su)
+summary(Neonics$Species.Common.Name)
+
 ```
 
-> Answer: 
+> Answer: The most common is honey bee, parasitic wasp, buff tailed bumblebee, carniolan honey bee, bumble bee and Italian honeybee. The six most commonly species are all pollinators. They got more attention than other species because they are important pollinators for agriculture crops. 
 
 8. Concentrations are always a numeric value. What is the class of Conc.1..Author. in the dataset, and why is it not numeric?
 
@@ -83,7 +83,7 @@ str(Neonics$Conc.1..Author.)
 
 ```
 
-> Answer: Because it has non-numeric subjects.
+> Answer: It is factor. Because it has non-numeric subjects and symbol like slash..
 
 
 ## Explore your data graphically (Neonics)
@@ -114,7 +114,7 @@ ggplot(Neonics, aes(x = Neonics$Endpoint)) +
 
 ```
 
-> Answer: The most common end poins are LOEL and NOEL.LOEL is the lowest observed adverse effect level. NOEL is the highest no obesrvabel effect level.
+> Answer: The most common end points are LOEL and NOEL.LOEL is the lowest observed adverse effect level. NOEL is the highest no observable effect level.
 >
 
 ## Explore your data (Litter)
@@ -135,7 +135,7 @@ unique(Litter$plotID)
 summary(Litter$plotID)
 ```
 
-> Answer: The information obtained from uninque function does not include the count of the same plot. However, It gives the number of the unique plots and has a rank of the plot code.
+> Answer: 12 plots. The information obtained from unique function does not include the count of the same plot. However, It gives the number of the unique plots and has a rank of the plot code.
 
 14. Create a bar graph of functionalGroup counts. This shows you what type of litter is collected at the Niwot Ridge sites. Notice that litter types are fairly equally distributed across the Niwot Ridge sites.
 ```{r}
