--- a/Lessons/07_DataWrangling.Rmd
+++ b/Lessons/07_DataWrangling.Rmd
@@ -16,6 +16,7 @@ editor_options:
 ## Set up your session
 
 ```{r, message = FALSE}
+#load the plyr then dplyr later, so we can mask out the plyr 
 getwd()
 library(plyr)
 library(tidyverse)
@@ -46,6 +47,7 @@ str(NTL.nutrient.data.PeterPaul)
 summary(NTL.nutrient.data.PeterPaul$lakename) 
 # Notice that other lake names didn't go away, even though they have zero values
 NTL.nutrient.data.PeterPaul <- droplevels(NTL.nutrient.data.PeterPaul)
+#after filters use the droplevel can remove all the zero
 summary(NTL.nutrient.data.PeterPaul$lakename)
 summary(NTL.nutrient.data.PeterPaul$comments)
 class(NTL.nutrient.data.PeterPaul$sampledate)
@@ -69,7 +71,10 @@ NTL.nutrient.data.PeterPaul.subset <- select(NTL.nutrient.data.PeterPaul,
                                              lakename, year4, daynum, month, sampledate, depth:po4)
 
 # write a more succinct line of code to subset the nutrient dataset. 
-
+NTL.nutrient.data.subset <- 
+  NTL.nutrient.data.PeterPaul %>% #
+  select(lakename=irradianceDeck) %>% #
+  select(lakename, year4, daynum, month, sampledate, depth:po4) 
 ```
 
 
@@ -86,7 +91,7 @@ Note: `tidyr` is moving away from `gather` and `spread` and toward `pivot_longer
 
 ```{r}
 # Gather nutrient data into one column
-NTL.nutrient.data.PeterPaul.gathered <- gather(NTL.nutrient.data.PeterPaul.subset, "nutrient", "concentration", tn_ug:po4)
+NTL.nutrient.data.PeterPaul.gathered <- gather(NTL.nutrient.data.PeterPaul.subset, "nutrient", "concentration", tn_ug:po4)#one column name is nutrient, filling with the name of the nutrients, another column is concentration, it will display the concentration value
 NTL.nutrient.data.PeterPaul.gathered <- subset(NTL.nutrient.data.PeterPaul.gathered, !is.na(concentration))
 count(NTL.nutrient.data.PeterPaul.gathered, nutrient)
 
@@ -99,7 +104,7 @@ NTL.nutrient.data.PeterPaul.spread <- spread(NTL.nutrient.data.PeterPaul.gathere
 # Split components of cells into multiple columns
 # Opposite of 'separate' is 'unite'
 NTL.nutrient.data.PeterPaul.dates <- separate(NTL.nutrient.data.PeterPaul.subset, sampledate, c("Y", "m", "d"))
-
+#separate create new column but not keep the original column
 # I recommend using lubridate rather than separate and unite.
 
 ```
@@ -128,7 +133,7 @@ write.csv(NTL.phys.nutrient.data.PeterPaul, row.names = FALSE,
 
 ```
 
-### rbind
+### rbind, binging rows
 
 The Niwot Ridge litter dataset, when downloaded from NEON, comes packaged with each month as a different .csv file. If we want to analyze the dataset as a single data frame, we need to combine each of these files. 
 
@@ -148,12 +153,14 @@ LitterFiles
 
 Litter <- LitterFiles %>%
   ldply(read.csv)
+#only use for the data file with the same column, for the different column, use the join function
 ```
 
 We also have information about individual traps, including the location and type of landcover. Let's join these two datasets. Note that "siteID", "plotID" and "trapID" exist in both datasets, and we can join them by these conditions. Notice the dimensions of the final dataset.
 ```{r}
 Trap <- read.csv("./Data/Raw/NEON_NIWO_Litter_trapdata_raw.csv")
 LitterTrap <- left_join(Litter, Trap, by = c("siteID", "plotID", "trapID"))
+#specify the column to join(those column exist in both dataset), the final data set will not repeat these columns.
 
 dim(Litter)
 dim(Trap)
@@ -172,16 +179,17 @@ dplyr functionality, combined with the pipes operator, allows us to split datase
 
 ```{r}
 NTL.PeterPaul.summaries <- 
-  NTL.phys.nutrient.data.PeterPaul %>%
+  NTL.phys.nutrient.data.PeterPaul %>%#select the file
   filter(depth == 0) %>%
   group_by(lakename, month) %>%
-  filter(!is.na(temperature_C) & !is.na(tn_ug) & !is.na(tp_ug)) %>%
-  summarise(meantemp = mean(temperature_C), 
+  filter(!is.na(temperature_C) & !is.na(tn_ug) & !is.na(tp_ug)) %>%#math is not allowed when there is na 
+  summarise(meantemp = mean(temperature_C), #create new column
             sdtemp = sd(temperature_C), 
             meanTN = mean(tn_ug), 
             sdTN = sd(tn_ug), 
             meanTP = mean(tp_ug), 
             sdTP = sd(tp_ug))
+#this cundtion need to load plyer and load deplyer
 
 write.csv(NTL.PeterPaul.summaries, row.names = FALSE, 
           file ="./Data/Processed/NTL-LTER_Lake_Summaries_PeterPaul_Processed.csv")
