--- a/Lessons/09_DataVisualization.Rmd
+++ b/Lessons/09_DataVisualization.Rmd
@@ -178,7 +178,8 @@ print(NvsP)
 NvsP2 <-
   ggplot(PeterPaul.chem.nutrients, aes(x = tp_ug, y = tn_ug, color = depth, shape = lakename)) +
   geom_point(alpha = 0.7, size = 2.5) +xlab("tn(ug/l")+ylab("tp(ug/l)")
-  labs() + # change your legend labels here
+  labs(x = expression(TP ~ (mu*g / L)), y = expression(TN ~ (mu*g / L)),
+       color = "Depth (m)", shape = "") +  # change your legend labels here
   scale_shape_manual(values = c(15, 17)) +
   scale_color_distiller(palette = "Blues", direction = 1) + # use scale_color_brewer for discrete variables
   #scale_color_viridis(option = "magma", direction = -1,end=0.8) +#chop up the bottom 20%
