--- a/Lessons/10_GLMs.Rmd
+++ b/Lessons/10_GLMs.Rmd
@@ -63,50 +63,50 @@ Are Ozone levels below the threshold for "good" AQI index (0-50)?
 ```{r}
 
 summary(EPAair$Ozone)
-EPAair.subsample <- sample_n(EPAair, 5000)
+EPAair.subsample <- sample_n(EPAair, 5000)#take a 5000 random sample
 
 # Evaluate assumption of normal distribution
-shapiro.test((EPAair.subsample$Ozone))
+shapiro.test((EPAair.subsample$Ozone))#the null hypothesis is that data is normally distributed, p value small means the data is very unlikely to be normally distributed.
 ggplot(EPAair, aes(x = Ozone)) +
-  geom_histogram() 
-qqnorm(EPAair$Ozone); qqline(EPAair$Ozone)
+  geom_histogram() #right skewed
+qqnorm(EPAair$Ozone); qqline(EPAair$Ozone)#;means continue the line
 
-O3.onesample <- t.test(EPAair$Ozone, mu = 50, alternative = "less")
+O3.onesample <- t.test(EPAair$Ozone, mu = 50, alternative = "less")#compare to 50,alternative = less means alternative hypothesis is less than 50. withour specifying the alternative, the default means alternative is higher and less than 50.t less than -1.96 and bigger than 1.96 means p value 0.05
 O3.onesample
 
 Ozone.plot <- ggplot(EPAair, aes(x = Ozone)) +
-  #geom_density(stat = "count", fill = "gray") +
-  geom_density(fill = "gray") +
+  geom_density(stat = "count", fill = "gray") +
+  #geom_density(fill = "gray") +# default is stat="density", it is moving average, smooth.
   geom_vline(xintercept = 50, color = "#238b45", lty = 2, size = 0.9) +
-  scale_x_continuous(expand = c(0, 0)) + scale_y_continuous(expand = c(0, 0))
+  scale_x_continuous(expand = c(0, 0)) + scale_y_continuous(expand = c(0, 0))#make the graph line with 0,0
 print(Ozone.plot)
 ```
 
 Write a sentence or two about the results of this test. Include both the results of the test and an interpretation that puts the findings in context of the resarch question.
 
-> 
+> EPA ozone measurements for 2018-2019 were significantly lower than 50, the AQI threshold for good air quality(one sample t-test; t=-57.98, p<0.0001)
 
 ### Two-sample t-test
 The two-sample *t* test is used to test the hypothesis that the mean of two samples is equivalent. Unlike the one-sample tests, a two-sample test requires a second assumption that the variance of the two groups is equivalent. Are Ozone levels different between 2018 and 2019?
 
 ```{r}
 shapiro.test(EPAair$Ozone[EPAair$Year == 2018])
-shapiro.test(EPAair$Ozone[EPAair$Year == 2019])
-var.test(EPAair$Ozone ~ EPAair$Year)
-
+shapiro.test(EPAair$Ozone[EPAair$Year == 2019])#not normally distributed
+var.test(EPAair$Ozone ~ EPAair$Year)#tes ozone by year, the null hypothesis the ratio is equal to 1. not equal
 ggplot(EPAair, aes(x = Ozone, color = as.factor(Year))) +
   geom_freqpoly()
 
 # Format as a t-test
-O3.twosample <- t.test(EPAair$Ozone ~ EPAair$Year)
-O3.twosample
+O3.twosample <- t.test(EPAair$Ozone ~ EPAair$Year)#default alternative hypothesis is the means are different
+O3.twosample #p value small means they are different, confidence interval not include 0
 O3.twosample$p.value
 
 # Format as a GLM
 O3.twosample2 <- lm(EPAair$Ozone ~ EPAair$Year)
-summary(O3.twosample2)
+summary(O3.twosample2)# for each year increase, the AQI increase for 0.8
 
 plot(O3.twosample2)
+par(mfrow=c(2,2))
 ```
 
 ### Non-parametric equivalent of t-test: Wilcoxon test
@@ -114,6 +114,7 @@ plot(O3.twosample2)
 When we wish to avoid the assumption of normality, we can apply *distribution-free*, or non-parametric, methods in the form of the Wilcoxon rank sum (Mann-Whitney) test. The Wilcoxon test replaces the data by their rank and calculates the sum of the ranks for each group. Notice that the output of the Wilcoxon test is more limited than its parametric equivalent.
 
 ```{r}
+#use wilcoxon when the data do not meet normlaity
 O3.onesample.wilcox <- wilcox.test(EPAair$Ozone, mu = 50, alternative = "less")
 O3.onesample.wilcox
 O3.twosample.wilcox <- wilcox.test(EPAair$Ozone ~ EPAair$Year)
@@ -129,13 +130,28 @@ Create three plots, each with appropriately formatted axes and legends. Choose a
 3. geom_violin of ozone divided by year, with the 0.5 quantile marked as a horizontal line. Add letters representing a significant difference between 2018 and 2019. 
 
 ```{r}
+o3.density <- ggplot(EPAair, aes(x = Ozone, fill=as.factor(Year))) +
+  geom_density(alpha=0.5,stat = "count",color=NA) +
+  #geom_density(fill = "gray") +# default is stat="density", it is moving average, smooth.
+  scale_x_continuous(expand = c(0, 0)) + scale_y_continuous(expand = c(0, 0))#make the graph line with 0,0
+print(o3.density)
+
+o3.boxplot <- ggplot(EPAair, aes(y = Ozone, x= as.factor(Year), color=as.factor(Year))) +
+  geom_boxplot() +labs(y = "Ozone PPM", x ="Year")+
+  theme(legend.position = "none")
+print(o3.boxplot)
+
+o3.violin <- ggplot(EPAair, aes(y = Ozone, x= as.factor(Year))) +
+  geom_violin( fill = "gray")+ 
+geom_hline(yintercept = 50, color = "#238b45", lty = 2, size = 0.9) 
+print(o3.violin)
 
 
 ```
 
 Now, write a summary of your findings, incorporating statistical output, reference to the figure(s), and a contextual interpretation.
 
-> 
+ > EPA ozone measurements for 2018-2019 were significantly lower than 50, the AQI threshold for good air quality(one sample Wilcoxon test; V=, p<0.0001).EPA ozone measurements for 2018-2019 were significantly different(two sample Wilcoxon test,V= p<0.0001)
 
 
 
