--- a/Assignments/A07_GLMs_Week2.Rmd
+++ b/Assignments/A07_GLMs_Week2.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Assignment 7: GLMs week 2 (Linear Regression and beyond)"
-author: "Student Name"
+author: "Yang Wang"
 output: pdf_document
 geometry: margin=2.54cm
 editor_options: 
@@ -27,9 +27,19 @@ The completed exercise is due on Tuesday, February 25 at 1:00 pm.
 
 ```{r}
 #1
-
+getwd()
+library(tidyverse)
+library(nlme)
+library(piecewiseSEM)
+library(lubridate)
+lake<- read.csv("./Data/Raw/NTL-LTER_Lake_ChemistryPhysics_Raw.csv")
 
 #2
+# Set theme
+mytheme <- theme_classic(base_size = 14) +
+  theme(axis.text = element_text(color = "black"), 
+        legend.position = "bottom")
+theme_set(mytheme)
 
 ```
 
@@ -47,9 +57,22 @@ Research question: What is the best set of predictors for lake temperatures in J
 
 ```{r}
 #3
+lake.july <- 
+lake%>%
+filter(daynum >180 & daynum <211)%>%
+select(lake, lakename, year4, daynum, depth, temperature_C)%>%
+na.omit()
 
 
 #4
+
+cor.lake <- cor(lake.july)
+cor.plot<- corrplot.mixed(cor.lake, upper = "ellipse")
+
+lake.AIC <- lm(data = lake.july,temperature_C ~ depth + year4 + lakename+ daynum )
+step(TPAIC)
+
+lake.main<-lm (data = lake.july,temperature_C ~ depth + year4 + lakename+ daynum )
 
 ```
 
@@ -61,6 +84,8 @@ Research question: What is the best set of predictors for lake temperatures in J
 
 ```{r}
 #6
+lake.inter <- lm(data = lake.july, temperature_C ~ depth * lakename)
+summary(lake.inter)
 
 ```
 
@@ -72,6 +97,16 @@ Research question: What is the best set of predictors for lake temperatures in J
 
 ```{r}
 #8
+lake.plot <-
+ggplot(lake.july, aes(x = depth, y = temperature_C)) +
+  geom_point(aes(color=lakename,alpha=0.5)) +
+  geom_smooth(method="lm",se=FALSE)+
+  scale_color_viridis_d() +
+  labs(x = "", y = expression("Temperature " ( degree~C)), color = "") +
+  ylim()+
+  theme(legend.spacing.x = unit(0, "cm"))
+
+print(lake.plot)
 
 ```
 
@@ -81,8 +116,13 @@ a. Build and run a mixed effects model.
 b. Check the difference between the marginal and conditional R2 of the model. 
 
 ```{r}
+litter<- read.csv("./Data/Processed/NEON_NIWO_Litter_mass_trap_Processed.csv")
 
-
+litter.mixed <- lme(data = litter,
+                     dryMass ~ nlcdClass*functionalGroup, 
+                     random = ~1|plotID)
+summary(litter.mixed)
+rsquared(litter.mixed)#marginal is the fixed effect, conditional R2 is after adding random effect
 ```
 
 b. continued... How much more variance is explained by adding the random effect to the model? 
@@ -92,10 +132,14 @@ b. continued... How much more variance is explained by adding the random effect 
 c. Run the same model without the random effect.
 d. Run an anova on the two tests. 
 ```{r}
- 
+litter.fixed <- lm(data = litter,
+                      dryMass ~ nlcdClass*functionalGroup )
+summary(litter.fixed)
+
+anova(litter.mixed, litter.fixed)
 
 ```
 
 d. continued... Is the mixed effects model a better model than the fixed effects model? How do you know?
 
-> Answer: 
+> Answer: The mixed effects model is a better model than the fixed effects model because it has higher R2 value, which means the model has higher power in expalinin gthe varience of the data.
