--- a/Lessons/12_GLMs.Rmd
+++ b/Lessons/12_GLMs.Rmd
@@ -17,7 +17,7 @@ editor_options:
 ```{r, message = FALSE}
 getwd()
 library(tidyverse)
-options(scipen = 4)
+options(scipen = 4)#prevent e, 4 digital after 0 will be shown
 
 PeterPaul.chem.nutrients <- read.csv("./Data/Processed/NTL-LTER_Lake_Chemistry_Nutrients_PeterPaul_Processed.csv")
 
@@ -39,6 +39,7 @@ The linear regression will test the null hypotheses that
 1. The intercept (alpha) is equal to zero.
 2. The slope (beta) is equal to zero
 
+# R is -1 to 1, R2 is 0 to 1.
 Whether or not we care about the result of each of these tested hypotheses will depend on our research question. Sometimes, the test for the intercept will be of interest, and sometimes it will not.
 
 Important components of the linear regression are the correlation and the R-squared value. The **correlation** is a number between -1 and 1, describing the relationship between the variables. Correlations close to -1 represent strong negative correlations, correlations close to zero represent weak correlations, and correlations close to 1 represent strong positive correlations. The **R-squared value** is the correlation squared, becoming a number between 0 and 1. The R-squared value describes the percent of variance accounted for by the explanatory variables. 
@@ -52,11 +53,14 @@ irradiance.regression <- lm(data = PeterPaul.chem.nutrients, irradianceWater ~ d
 summary(irradiance.regression)
 
 # Correlation
-cor.test(PeterPaul.chem.nutrients$irradianceWater, PeterPaul.chem.nutrients$depth)
+r<-cor.test(PeterPaul.chem.nutrients$irradianceWater, PeterPaul.chem.nutrients$depth)
+R2=r*r
 ```
 Question: How would you report the results of this test (overall findings and report of statistical output)?
 
->  
+>  At greater depths, irridation decrease. For each 1m increase in depth, irridance decrease by 95.89 units(Linear regression, R2=0.31, df=15,449, p<0.001).
+>Irrdiance decreases significantly with increasing depth(Linear regression, R2=0.31, df=15,449, p<0.001)
+>Depth accounts for 31% of variance in lake irradiance(Linear regression, R2=0.31, df=15,449, p<0.001).
 
 So, we see there is a significant negative correlation between irradiance and depth (lower light levels at greater depths), and that this model explains about 31 % of the total variance in irradiance. Let's visualize this relationship and the model itself. 
 
@@ -71,9 +75,9 @@ An exploratory option to visualize the model fit is to use the function `plot`. 
 4. **Residuals vs. Leverage.** This graph will display potential outliers. The values that fall outside the dashed red lines (Cook's distance) are outliers for the model. Watch for drastic departures of the solid red line from horizontal - this is a sign of a poor model fit.
 
 ```{r, fig.height = 3, fig.width = 4}
-par(mfrow = c(2,2), mar=c(1,1,1,1))
+par(mfrow = c(2,2), mar=c(1,1,1,1))#mar for printing better, do not need to include the plot in the report.
 plot(irradiance.regression)
-par(mfrow = c(1,1))
+par(mfrow = c(1,1))##restore plot one by one
 ```
 
 The option best suited for communicating findings is to plot the explanatory and response variables as a scatterplot. 
@@ -82,9 +86,10 @@ The option best suited for communicating findings is to plot the explanatory and
 # Plot the regression
 irradiancebydepth <- 
   ggplot(PeterPaul.chem.nutrients, aes(x = depth, y = irradianceWater)) +
-  #ylim(0, 2000) +
+  ylim(0, 2000) +
   geom_point() 
 print(irradiancebydepth) 
+#data exits the exponential relationship, consider log tranfer data
 ```
 
 Given the distribution of irradiance values, we don't have a linear relationship between x and y in this case. Let's try log-transforming the irradiance values.
@@ -92,6 +97,7 @@ Given the distribution of irradiance values, we don't have a linear relationship
 ```{r, fig.height = 3, fig.width = 4}
 PeterPaul.chem.nutrients <- filter(PeterPaul.chem.nutrients, 
                                    irradianceWater != 0 & irradianceWater < 5000)
+##filter out the 0 before log transformation, adjusted R2 give you penality of low sample size, which is better.
 irradiance.regression2 <- lm(data = PeterPaul.chem.nutrients, log(irradianceWater) ~ depth)
 summary(irradiance.regression2)
 
@@ -103,18 +109,19 @@ par(mfrow = c(1,1))
 irradiancebydepth2 <- 
   ggplot(PeterPaul.chem.nutrients, aes(x = depth, y = irradianceWater)) +
   geom_smooth(method = "lm") +
-  scale_y_log10() +
+  scale_y_log10() +#alternatively is to log the y in aes.
   geom_point() 
 print(irradiancebydepth2) 
 
 # SE can also be removed
 irradiancebydepth2 <- 
     ggplot(PeterPaul.chem.nutrients, aes(x = depth, y = irradianceWater)) +
-    geom_point() +
+    geom_point(alpha=0.3,pch=1,color="pink") +
     scale_y_log10() +
-    geom_smooth(method = 'lm', se = FALSE, color = "black")
+  labs(alpha=0.5,x="Depth(m)", y="Radiance")+
+    geom_smooth(method = 'lm', alpha=0.5,se = FALSE, color = "black")
 print(irradiancebydepth2)
-
+#se=FALSE is removin the standard error.
 # Make the graph attractive
 
 ```
@@ -124,7 +131,7 @@ As with the t-test and ANOVA, there is a nonparametric variant to the linear reg
 
 ``` {r}
 cor.test(PeterPaul.chem.nutrients$irradianceWater, PeterPaul.chem.nutrients$depth, 
-         method = "spearman", exact = FALSE)
+         method = "spearman", exact = FALSE)#use this test, when it does not meet the linear assumption. exact is the exact p value
 ```
 
 ## Multiple Regression
@@ -157,9 +164,11 @@ PeterPaulnutrients <-
   PeterPaul.chem.nutrients %>%
   select(tn_ug:po4) %>%
   na.omit()
+
 PeterPaulCorr <- cor(PeterPaulnutrients)
+PeterPaulCorr
 corrplot(PeterPaulCorr, method = "ellipse")
-corrplot.mixed(PeterPaulCorr, upper = "ellipse")
+corrplot.mixed(PeterPaulCorr, upper = "ellipse")#this is better with value.
 ```
 
 ## AIC to select variables
@@ -169,14 +178,17 @@ However, it is possible to over-parameterize a linear model. Adding additional e
 Let's say we want to know which explanatory variables will allow us to best predict total phosphorus concentrations. Potential explanatory variables from the dataset could include depth, dissolved oxygen, temperature, PAR, total N concentration, and phosphate concentration.
 
 ```{r}
+#AIC value is not comparable across different contaext.
 Paul.naomit <- PeterPaul.chem.nutrients %>%
   filter(lakename == "Paul Lake") %>%
   na.omit()
 
 TPAIC <- lm(data = Paul.naomit, tp_ug ~ depth + dissolvedOxygen + 
-              temperature_C + tn_ug + po4)
+              temperature_C + tn_ug + po4)#pick up the high nutrients based on the corelation test.
 step(TPAIC)
 TPmodel <- lm(data = Paul.naomit, tp_ug ~ dissolvedOxygen + temperature_C + tn_ug)
-summary(TPmodel)
+
+summary(TPmodel)#tn is not significnant by itself but it does count significant varience of the data set.
 
 ```
+Total p is significnatly correlated to the temperature, dissolved oxygen and 
